--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -178,63 +178,13 @@
        max-height: 36rem;
     bottom: -2; ">
 
-<div class="example-handle" cdkDragHandle style="cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+<div class="example-handle" cdkDragHandle style="display: flex;
+    flex-direction: row;
+    justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor" viewBox="0 0 24 24">
     <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
     <path d="M0 0h24v24H0z" fill="none"></path>
   </svg></div>
-     <!-- Cards Criteria-->
-     <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Criteria</mat-card-title>
-      </mat-card-header>
-      <br>
-      <div class="sm-section2-rkScale" >
-        <div class="sm-column-box-rkScale">
-          <mat-form-field appearance="outline" style="width: 40%">
-            <mat-label>Category Name</mat-label>
-            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name" style="font-size: 20px;color: #324395;">
-            <mat-hint>Add a category to the left side</mat-hint>
-          </mat-form-field>
 
-          <mat-form-field appearance="outline" style="width: 40%">
-            <mat-label>Category Description</mat-label>
-            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description" style="font-size: 20px;color: #ee7f25;">
-            <mat-hint>Add a rate matrix subtitle</mat-hint>
-          </mat-form-field>
-        </div>
-<br>
-
-          <div class="sm-row-box-rkScale">
-            <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
-
-            <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox>
-          </div>
-          <div class="sm-row-box-rkScale">
-           <div> <div style="font-size: 16px;color: #48535e;">MAX NUMBER OF CRITERIA</div>
-
-           <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; " >
-               <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
-                   {{bmxItem.componentSettings[0].minRule}}</div>
-               <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
-                   style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
-           </div></div>
-          <div>
-            <div style="font-size: 16px;color: #48535e;">MIN NUMBER OF CRITERIA</div>
-
-          <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-              <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
-                  {{bmxItem.componentSettings[0].maxRule}}</div>
-              <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
-                  style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
-          </div></div>
-          </div>
-      </div>
-      <mat-card-content>
-
-      </mat-card-content>
-
-    </mat-card>
-<br>
     <!-- Cards Test Name-->
     <mat-card class="example-card">
       <mat-card-header>
@@ -259,11 +209,68 @@
 
     </mat-card>
 <br>
+  <!-- Cards Criteria-->
+     <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Category</mat-card-title>
+      </mat-card-header>
+      <br>
+      <div class="sm-section2-rkScale" >
+        <div class="sm-column-box-rkScale">
+          <mat-form-field appearance="outline" style="width: 40%">
+            <mat-label>Category Name</mat-label>
+            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name" style="font-size: 20px;color: #324395;">
+            <mat-hint>Add a category to the left side</mat-hint>
+          </mat-form-field>
 
+          <mat-form-field appearance="outline" style="width: 40%">
+            <mat-label>Sub category Description</mat-label>
+            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
+                placeholder="Sub category Description" style="font-size: 20px;color: #ee7f25;">
+            <mat-hint>Enter a brief description of the Sub category </mat-hint>
+            <!-- Hint text for Category Description -->
+        </mat-form-field>
+        </div>
+<br>
+
+          <div class="sm-row-box-rkScale">
+            <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+
+            <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox>
+          </div>
+          <div class="sm-row-box-rkScale">
+            <div>
+                <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
+                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                        {{bmxItem.componentSettings[0].minRule}}</div>
+                    <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
+                        style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
+                </div>
+                <div style="font-size: 13px;color: #48535e;">Min Number Of Questions To Answer</div>
+            </div>
+            <div>
+                <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
+                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                        {{bmxItem.componentSettings[0].maxRule}}</div>
+                    <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
+                        style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
+                </div>
+                <div style="font-size: 13px;color: #48535e;">Max Number Of Questions To Answer</div>
+            </div>
+        </div>
+      </div>
+      <mat-card-content>
+
+      </mat-card-content>
+
+    </mat-card>
+<br>
    <!-- Cards Select Ranking-->
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Select Ranking</mat-card-title>
+        <mat-card-title>Select Ranking & Criteria
+
+        </mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div class="sm-section3-rkScale">
@@ -271,16 +278,14 @@
 
 
           <div class="sm-row-box-rkScale">
-          <div>
+            <div>
               <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
               <br>
               <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                  {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
-                      max="10">
-                  10 <br>
-              </div>
-              <label for="volume">{{rankingScaleValue}}</label>
 
+                  <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0" max="10">
+                  {{rankingScaleValue}}
+              </div>
           </div>
           <div style="    margin-top: 0.5rem;
         ">
